<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".DeviceRegistrationActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/system_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <EditText
        android:id="@+id/etStudentRoll"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/edittext_left_rounded_corners"
        android:drawableStart="@drawable/ic_account_circle_24px"
        android:drawablePadding="8dp"
        android:hint="@string/student_roll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/button_right_rounded_corners"
        android:drawableEnd="@drawable/ic_navigate_next_24px"
        android:drawableTint="@color/softWhite"
        app:layout_constraintStart_toEndOf="@+id/etStudentRoll"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textWelcomeReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textColor="@color/softBlack"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etStudentRoll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

</androidx.constraintlayout.widget.ConstraintLayout>