<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Organization Details Card -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardOrganizationDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp">

                <LinearLayout
                    android:id="@+id/layoutOrganizationHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/imgOrganization"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/ic_school_24px"
                        android:tint="@color/softBlack" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/organization_details"
                        android:textColor="@color/softBlack"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutOrganizationBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layoutOrganizationHead"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="start"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/organization"
                            android:textColor="@color/softBlack"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvOrgName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/none"
                            android:textColor="@color/softBlack"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/server_address"
                            android:textColor="@color/softBlack"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvServerAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/none"
                            android:textColor="@color/softBlack"
                            android:textSize="14sp"
                            android:textStyle="normal" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btnExitServer"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/layoutOrganizationBody"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_black_outline_rounded_corners"
                    android:text="@string/exit_server"
                    android:textColor="@drawable/button_black_outline_rounded_corners" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- Student Details Card -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardStudentDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardOrganizationDetails"
            android:layout_margin="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp">

                <LinearLayout
                    android:id="@+id/layoutStudentHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/imgStudent"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/ic_account_circle_24px"
                        android:tint="@color/softBlack" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/student_details"
                        android:textColor="@color/softBlack"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutStudentBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layoutStudentHead"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="start"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/student_name"
                                android:textColor="@color/softBlack"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvStudentName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/none"
                                android:textColor="@color/softBlack"
                                android:textSize="14sp"
                                android:textStyle="normal" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/student_roll"
                                android:textColor="@color/softBlack"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvStudentRoll"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/none"
                                android:textColor="@color/softBlack"
                                android:textSize="14sp"
                                android:textStyle="normal" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/department"
                                android:textColor="@color/softBlack"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvDepartment"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/none"
                                android:textColor="@color/softBlack"
                                android:textSize="14sp"
                                android:textStyle="normal" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/section"
                                android:textColor="@color/softBlack"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvSection"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/none"
                                android:textColor="@color/softBlack"
                                android:textSize="14sp"
                                android:textStyle="normal" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/start_year"
                                android:textColor="@color/softBlack"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvStartYear"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/none"
                                android:textColor="@color/softBlack"
                                android:textSize="14sp"
                                android:textStyle="normal" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/graduation_year"
                                android:textColor="@color/softBlack"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvGradYear"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/none"
                                android:textColor="@color/softBlack"
                                android:textSize="14sp"
                                android:textStyle="normal" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>